BaSP-W01-2022:General correction made

--- a/week01/index.html
+++ b/week01/index.html
@@ -11,33 +11,33 @@
     <body>
         <aside>
             <nav>
-                <img src="Pictures/Logo.html.png" alt="Logo Picture">
+                <img src="Assets/img/Logo.html.png" alt="Logo Picture">
                 <h2>
                     Trackgenix
                 </h2>
                 <span>
-                    <img src="Pictures/Icons/Home-Icon.png" alt="Home logo">Home
+                    <img src="Assets/img/Home-Icon.png" alt="Home logo">Home
                 </span>
                 <span>
-                    <img src="Pictures/Icons/SignUp-Icon.png" alt="Home Logo">SignUp
+                    <img src="Assets/img/SignUp-Icon.png" alt="Home Logo">SignUp
                 </span>
                 <span>
-                    <img src="Pictures/Icons/Login-Icon.png" alt="Login logo">Login
+                    <img src="Assets/img/Login-Icon.png" alt="Login logo">Login
                 </span>
             </nav>
             <div>
                 <h3>Contact Us</h3>
             </div>
             <div>
-                <img src="Pictures/Icons/Mail-Icon.png" alt="envolope">
+                <img src="Assets/img/Mail-Icon.png" alt="envolope">
                 <h4>trackgenix@gmail.com</h4>
             </div>
             <div>
-                <img src="Pictures/Icons/Phone-Icon.png" alt="Phone">
+                <img src="Assets/img/Phone-Icon.png" alt="Phone">
                 <h4>(000) 00000-0000</h4>
             </div>
             <div>
-                <img src="Pictures/Icons/Addres-Icon.png" alt="Address">
+                <img src="Assets/img/Addres-Icon.png" alt="Address">
                 <h4>
                     1234 Somewhere Road #8254.Nashville,TN 00000-0000
                 </h4>
@@ -60,69 +60,73 @@
                 project and provides information to the companies so they can make better decisions.
             </p>
         </div>
-        </section>
+        <section>
             <article>
                 <h2>
                     Who we are
                 </h2>
-                <img src="Pictures/Picture Header.png" alt="Work space Trackgenix">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                    dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                    dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
-                    and typesetting industry.
-                </p>
-        <section>
-            <h2>
-                Why choose us?
-            </h2>
                 <div>
-                    <h3>
-                        Productivy Booter
-                    </h3>
-                    <img src="Pictures/Productivy Booter.png" alt="This is an image about Productivy Booter">
+                    <img src="Assets/img/Picture Header.png" alt="Work space Trackgenix">
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                        make a type specimen book.
-                    </p>
-                <div>
-                    <h3>
-                        Work Traceability
-                    </h3>
-                    <img src="pictures/Work Traceability.png" alt="This is an image about Productivy Booter">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                        make a type specimen book.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
+                        and typesetting industry.
                     </p>
                 </div>
-                <div>
-                    <h3>
-                        Leadership and team management
-                    </h3>
-                    <img src="pictures/Leadership and team management.png" alt="This is an image about Leadership and team management">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                        make a type specimen book.
-                    </p>
-                </div>
-                <div>
-                    <h3>
-                        Decision making
-                    </h3>
-                    <img src="pictures/Decision making.png" alt="This is an image about Decision making">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                        make a type specimen book.
-                    </p>
-                </div>
+            </article>
         </section>
         <section>
-            <article>
+            <h2>
+                 Why choose us?
+            </h2>
+            <div>
+                <h3>
+                    Productivy Booter
+                </h3>
+                <img src="Assets/img/Productivy Booter.png" alt="This is an image about Productivy Booter">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                    make a type specimen book.
+                </p>
+            </div>
+            <div>
+                <h3>
+                    Work Traceability
+                </h3>
+                <img src="Assets/img/Productivy Booter.png" alt="This is an image about Productivy Booter">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                    make a type specimen book.
+                </p>
+            </div>
+            <div>
+                <h3>
+                Leadership and team management
+                </h3>
+                <img src="Assets/img/Leadership and team management.png" alt="This is an image about Leadership and team management">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                    make a type specimen book.
+                </p>
+            </div>
+            <div>
+                <h3>
+                    Decision making
+                </h3>
+                <img src="Assets/img/Decision making.png" alt="This is an image about Decision making">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                    make a type specimen book.
+                </p>
+            </div>
+        </section>
+        <section>
                 <h2>
                     Functionalities
                 </h2>
@@ -130,7 +134,7 @@
                 <h3>
                     Hours Log
                 </h3>
-                <img src="pictures/Icons/Hours Log.png" alt="This is an image about Hour Log">
+                <img src="Assets/img/Hours Log.png" alt="This is an image about Hour Log">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -140,7 +144,7 @@
                 <h3>
                     Resource management
                 </h3>
-                <img src="pictures/Icons/Resource Management.png" alt="This is an image about Resource Management">
+                <img src="Assets/img/Resource Management.png" alt="This is an image about Resource Management">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -150,7 +154,7 @@
                 <h3>
                     Reports
                 </h3>
-                <img src="pictures/Icons/Reports.png" alt="This is an image about Reports">
+                <img src="Assets/img/Reports.png" alt="This is an image about Reports">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -160,13 +164,12 @@
                 <h3>
                     Multiple Roles
                 </h3>
-                <img src="pictures/Icons/Multiple Roles.png" alt="This is an image about Multiple Roles">
+                <img src="Assets/img/Multiple Roles.png" alt="This is an image about Multiple Roles">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
                 </p>
             </div>
-            </article>
         </section>
         <section>
             <h2>
@@ -211,78 +214,83 @@
                     <input type="submit" name="Submit" value="Reset">
             </form>
         </section>
-        <nav>
-            <h4>
-                Product
-            </h4>
-            <ul>
-                <li>
-                    Features
-                </li>
-                <li>
-                    Downloads
-                </li>
-                <li>
-                    Integrations
-                </li>
-                <li>
-                    Additional features
-                </li>
-            </ul>
-            <h4>
-                Enterprise
-            </h4>
-            <ul>
-                <li>
-                    About us
-                </li>
-                <li>
-                    Clients
-                </li>
-                <li>
-                    Resources
-                </li>
-                <li>
-                    Blog
-                </li>
-            </ul>
-            <h4>
-                Support
-            </h4>
-            <ul>
-                <li>
-                    Helps
-            </li>
-                <li>
-                    Tutorials
-                </li>
-                <li>
-                    API
-                </li>
-                <li>
-                    Contact
-                </li>
-            </ul>
-        </nav>
+        <section>
+            <div>
+                <h4>
+                    Product
+                </h4>
+                <ul>
+                    <li>
+                        Features
+                    </li>
+                    <li>
+                        Downloads
+                    </li>
+                    <li>
+                        Integrations
+                    </li>
+                    <li>
+                        Additional features
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h4>
+                    Enterprise
+                </h4>
+                <ul>
+                    <li>
+                        About us
+                    </li>
+                    <li>
+                        Clients
+                    </li>
+                    <li>
+                        Resources
+                    </li>
+                    <li>
+                        Blog
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h4>
+                    Support
+                </h4>
+                <ul>
+                    <li>
+                        Helps
+                    </li>
+                    <li>
+                        Tutorials
+                    </li>
+                    <li>
+                        API
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                </ul>
+        </section>
         <footer>
             <div>
-                <img src="pictures/Icons/LinkedIn - Negative.png" alt="Linked In">
+                <img src="Assets/img/LinkedIn - Negative.png" alt="Linked In">
                 <a href="https://www.linkedin.com/" target="_blank"></a>
             </div>
             <div>
-                <img src="pictures/Icons/Facebook - Negative.png" alt="Facebook">
+                <img src="Assets/img/Facebook - Negative.png" alt="Facebook">
                 <a href="https://www.facebook.com/" target="_blank"></a>
             </div>
             <div>
-                <img src="pictures/Icons/Twitter - Negative.png" alt="Twitter">
+                <img src="Assets/img/Twitter - Negative.png" alt="Twitter">
                 <a href="https://twitter.com//" target="_blank"></a>
             </div>
             <div>
-                <img src="pictures/Icons/Instagram - Negative.png" alt="Instagram">
+                <img src="Assets/img/Instagram - Negative.png" alt="Instagram">
                 <img src="https://www.instagram.com/" alt="">
             </div>
             <div>
-                <img src="pictures/Icons/Github - Negative.png" alt="Github">
+                <img src="Assets/img/Github - Negative.png" alt="Github">
                 <a href="https://github.com/" target="_blank"></a>
             </div>
             <p>
