BaSP-W0X-2022-:Finish sidebar and header

--- a/semana-02/index.html
+++ b/semana-02/index.html
@@ -7,66 +7,97 @@
         <title>
             Trackgenix
         </title>
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
     <body>
+    <main>
         <aside>
-            <nav>
-                <img src="Assets/img/Logo.html.png" alt="Logo Picture">
-                <h2>
+            <div id="logo">
+                <img src="assests/img.png/logo-picture.png" alt="Logo icon">
+                <h2 id:tittle>
                     Trackgenix
                 </h2>
-                <span>
-                    <img src="Assets/img/Home-Icon.png" alt="Home logo">Home
-                </span>
-                <span>
-                    <img src="Assets/img/SignUp-Icon.png" alt="Home Logo">SignUp
-                </span>
-                <span>
-                    <img src="Assets/img/Login-Icon.png" alt="Login logo">Login
-                </span>
+                <img class="arrow" src="./assests/img.png/arrow-icon.png" alt="arrow">
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#" id class="home-text-option"="home">
+                            <img src="assests/img.png/home-icon.png" alt="Home icon">Home
+                        </a>
+                    </li>
+                    <li>
+                        <a class="signup-icon-option" href="#">
+                            <img src="assests/img.png/sign-up-icon.png" alt ="SignUp icon">SignUp
+                        </a>
+                    </li>
+                    <li class="login-icon-option">
+                        <a href="#">
+                            <img src="assests/img.png/login-icon.png" alt="Login icon">Login
+                        </a>
+                    </li>
+                </ul>
             </nav>
-            <div>
-                <h3>Contact Us</h3>
-            </div>
-            <div>
-                <img src="Assets/img/Mail-Icon.png" alt="envolope">
-                <h4>trackgenix@gmail.com</h4>
-            </div>
-            <div>
-                <img src="Assets/img/Phone-Icon.png" alt="Phone">
-                <h4>(000) 00000-0000</h4>
-            </div>
-            <div>
-                <img src="Assets/img/Addres-Icon.png" alt="Address">
-                <h4>
-                    1234 Somewhere Road #8254.Nashville,TN 00000-0000
-                </h4>
-            </div>
+            <nav>
+            <div class="contact-us">
+            <p class="contact-us-tittle">
+                Contact us
+            </p>
+                <ul>
+                    <li>
+                        <a href="#" id="contact-us-icons">
+                            <p>
+                            <img src="assests/img.png/mail-icon.png" class="img-icon" alt="Mail-icon">
+                                trackgenix@gmail.com
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" id=contact-us-icon>
+                            <p>
+                            <img src="assests/img.png/phone-icon.png" alt="Phone-icon">
+                                (000) 0000-00000
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" id="contact-us-icon">
+                            <p>
+                            <img src="assests/img.png/addres-icon.png" alt="Addres-icon">
+                                Rioja 1234. Rosario, Santa Fe. TN 00000-0000
+                            </p>
+                        </a>
+                    </li>
+            </nav>
         </aside>
         <header>
-            <h1>
-                Trackgenix
-            </h1>
-            <h2>
-                By GigaTech Sowtware Solutions SA
+            <div class="header-background">
+                <div class="header-text">
+                    <img src="assests/img.png/header-picture.png" alt="Header picture">
+                <h1 class="header-tittle">
+                    Trackgenix
+                </h1>
+                <h2>
+                    By GigaTech Sowtware Solutions SA
+                <p>
+                    The company GigaTech Sowtware Solutions SA provides sowtware development services to other
+                    companies,wich have too many employees. Because of this "Trackgenix" was created.
+                </p>
+                <p class="header-text-description">
+                    "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
+                    project and provides information to the companies so they can make better decisions.
+                </p>
+            </div>
         </header>
-        <div>
-            <p>
-                The company GigaTech Sowtware Solutions SA provides sowtware development services to other
-                companies,wich have too many employees. Because of this "Trackgenix" was created.
-            </p>
-            <p>
-                "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
-                project and provides information to the companies so they can make better decisions.
-            </p>
-        </div>
         <section>
             <article>
                 <h2>
                     Who we are
                 </h2>
                 <div>
-                    <img src="Assets/img/Picture Header.png" alt="Work space Trackgenix">
+                    <img src="assests/img.png/work-traceability-picture.png" alt="Work Traceability Picture">
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                         dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
@@ -85,7 +116,7 @@
                 <h3>
                     Productivy Booter
                 </h3>
-                <img src="Assets/img/Productivy Booter.png" alt="This is an image about Productivy Booter">
+                <img src="assests/img.png/productivy-booter-picture.png" alt="Productivy Booter picture">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
@@ -96,7 +127,7 @@
                 <h3>
                     Work Traceability
                 </h3>
-                <img src="Assets/img/Productivy Booter.png" alt="This is an image about Productivy Booter">
+                <img src="assests/img.png/work-traceability-picture.png" alt="Work Traceability picture">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
@@ -107,7 +138,7 @@
                 <h3>
                 Leadership and team management
                 </h3>
-                <img src="Assets/img/Leadership and team management.png" alt="This is an image about Leadership and team management">
+                <img src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
@@ -118,7 +149,7 @@
                 <h3>
                     Decision making
                 </h3>
-                <img src="Assets/img/Decision making.png" alt="This is an image about Decision making">
+                <img src="assests/img.png/decision-making-picture.png" alt="Decision making picture">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
@@ -134,7 +165,7 @@
                 <h3>
                     Hours Log
                 </h3>
-                <img src="Assets/img/Hours Log.png" alt="This is an image about Hour Log">
+                <img src="assests/img.png/hours-log-icon.png" alt="Hours log icon">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -144,7 +175,7 @@
                 <h3>
                     Resource management
                 </h3>
-                <img src="Assets/img/Resource Management.png" alt="This is an image about Resource Management">
+                <img src="assests/img.png/resource-management-icon.png" alt="Resource management icon">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -154,7 +185,7 @@
                 <h3>
                     Reports
                 </h3>
-                <img src="Assets/img/Reports.png" alt="This is an image about Reports">
+                <img src="assests/img.png/reports-icon.png" alt="Reports icon">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -164,7 +195,7 @@
                 <h3>
                     Multiple Roles
                 </h3>
-                <img src="Assets/img/Multiple Roles.png" alt="This is an image about Multiple Roles">
+                <img src="assests/img.png/multiple-roles.png" alt="Multiple roles">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -219,7 +250,7 @@
                 <h4>
                     Product
                 </h4>
-                <ul>
+                <ol>
                     <li>
                         Features
                     </li>
@@ -232,13 +263,13 @@
                     <li>
                         Additional features
                     </li>
-                </ul>
+                </ol>
             </div>
             <div>
                 <h4>
                     Enterprise
                 </h4>
-                <ul>
+                <ol>
                     <li>
                         About us
                     </li>
@@ -251,13 +282,13 @@
                     <li>
                         Blog
                     </li>
-                </ul>
+                </ol>
             </div>
             <div>
                 <h4>
                     Support
                 </h4>
-                <ul>
+                <ol>
                     <li>
                         Helps
                     </li>
@@ -270,27 +301,28 @@
                     <li>
                         Contact
                     </li>
-                </ul>
+                </ol>
         </section>
+    </main>
         <footer>
             <div>
-                <img src="Assets/img/LinkedIn - Negative.png" alt="Linked In">
+                <img src="assests/img.png/linkedIn-icon.png" alt="Linked In icon">
                 <a href="https://www.linkedin.com/" target="_blank"></a>
             </div>
             <div>
-                <img src="Assets/img/Facebook - Negative.png" alt="Facebook">
+                <img src="assests/img.png/facebook-icon.png" alt="Facebook icon">
                 <a href="https://www.facebook.com/" target="_blank"></a>
             </div>
             <div>
-                <img src="Assets/img/Twitter - Negative.png" alt="Twitter">
+                <img src="assests/img.png/twitter-icon.png" alt="Twitter icon">
                 <a href="https://twitter.com//" target="_blank"></a>
             </div>
             <div>
-                <img src="Assets/img/Instagram - Negative.png" alt="Instagram">
+                <img src="assests/img.png/instagram-icon.png" alt="Instagram icon">
                 <img src="https://www.instagram.com/" alt="">
             </div>
             <div>
-                <img src="Assets/img/Github - Negative.png" alt="Github">
+                <img src="assests/img.png/github-icon.png" alt="Github icon">
                 <a href="https://github.com/" target="_blank"></a>
             </div>
             <p>
