BaSP-W0X-2022: Ending header

--- a/semana-02/index.html
+++ b/semana-02/index.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
     <body>
-    <main>
         <aside>
             <div id="logo">
                 <img src="assests/img.png/logo-picture.png" alt="Logo icon">
@@ -72,32 +71,32 @@
                     </li>
             </nav>
         </aside>
-        <header>
-            <div class="header-background">
+    <main>
+            <section class="header-background">
+                <img src="assests/img.png/header-picture.png" alt="Header Picture">
                 <div class="header-text">
-                    <img src="assests/img.png/header-picture.png" alt="Header picture">
-                <h1 class="header-tittle">
-                    Trackgenix
-                </h1>
-                <h2>
-                    By GigaTech Sowtware Solutions SA
-                <p>
-                    The company GigaTech Sowtware Solutions SA provides sowtware development services to other
-                    companies,wich have too many employees. Because of this "Trackgenix" was created.
-                </p>
-                <p class="header-text-description">
-                    "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
-                    project and provides information to the companies so they can make better decisions.
-                </p>
-            </div>
-        </header>
+                    <h1 class="header-tittle">
+                        Trackgenix
+                    </h1>
+                    <div>
+                        By GigaTech Sowtware Solutions SA
+                    <p>
+                        The company GigaTech Sowtware Solutions SA provides sowtware development services to other
+                        companies,wich have too many employees. Because of this "Trackgenix" was created.
+                    </p>
+                    <p class="header-text-description">
+                        "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
+                        project and provides information to the companies so they can make better decisions.
+                    </p>
+                </div>
+            </section>
         <section>
             <article>
                 <h2>
                     Who we are
                 </h2>
                 <div>
-                    <img src="assests/img.png/work-traceability-picture.png" alt="Work Traceability Picture">
+                    <!-- <img src="assests/img.png/work-traceability-picture.png" alt="Work Traceability Picture"> -->
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                         dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
@@ -107,7 +106,6 @@
                     </p>
                 </div>
             </article>
-        </section>
         <section>
             <h2>
                  Why choose us?
