--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -155,34 +155,33 @@
                             </div>
                         </div>
                     </div>
-                    <div class="main-container">
-                        <div class="cards-container">
+                    <!-- <div class="main-container"> -->
+                        <div class="cards-white">
                             <div class="card-box">
-                                <div class="box-60p">
+                                <div class="box-position">
                                     <h3 class="text-size-35">
                                         Leadership and Team Management
                                     </h3>
                                     <span class="line-gray-thin"></span>
-                                    <p class="text-size-30 text-container">
-                                    <p class="text-size-30 card-text-container">
+                                    <p class="text-size-30 card-p-white">
                                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                                     </p>
                                 </div>
-                                <img class="box-40p card-img" src="./assets/img/leadership.png" alt="Leadership and team management image">
+                                <img class="card-img" src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management image">
                             </div>
                         </div>
                     </div>
-                    <div class="bg-gray">
+                    <div class="cards-gray">
                         <div class="main-container">
-                            <div class="cards-container">
+                            <!-- <div class="cards-container"> -->
                                 <div class="card-box">
-                                    <img class="box-40p card-img" src="./assets/img/decision-making.png" alt="Decision Making image">
-                                    <div class="box-60p">
-                                        <h3 class="text-size-35">
+                                    <img class="card-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
+                                    <div class="box-position">
+                                        <h3 class="text-size-35-gray">
                                             Decision Making
                                         </h3>
                                         <span class="line-white"></span>
-                                        <p class="text-size-30 text-container">
+                                        <p class="text-size-30 card-p-white">
                                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                                         </p>
                                     </div>
@@ -193,50 +192,110 @@
                 </div>
             </section>
         <section>
-                <h2>
+            <section class="main-container">
+                <h2 class="text-size-35 text-center">
                     Functionalities
                 </h2>
-            <div>
-                <h3>
-                    Hours Log
-                </h3>
-                <img src="assests/img.png/hours-log-icon.png" alt="Hours log icon">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard.
-                </p>
+                <span class="line-gray"></span>
+                <div class="f-container">
+                    <div class="block padding20">
+                        <div>
+                            <h3 class="f-text-title">
+                                Hours Log
+                            </h3>
+                            <img src="assests/img.png/hours-log-icon.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                            <p class="f-text-body">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                            </p>
+                    <div class="block padding20">
+                    <div class="block-f-img block-f-img-bg-rm"></div>
+                        <div>
+                            <h3 class="f-text-title">
+                                Resource Management
+                            </h3>
+                            <img src="assests/img.png/resource-management-icon.png" alt="">
+                        </div>
+                        <p class="f-text-body">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                        </p>
+            <div class="block padding20">
+                <div class="block-f-img block-f-img-bg-r"></div>
+                <div>
+                    <div>
+                        <h3 class="f-text-title">
+                            Reports
+                        </h3>
+                        <img src="assests/img.png/reports-icon.png" alt="">
+                    </div>
+                    <div>
+                        <p class="f-text-body">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div>
-                <h3>
-                    Resource management
-                </h3>
-                <img src="assests/img.png/resource-management-icon.png" alt="Resource management icon">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard.
-                </p>
+            <div class="block padding20">
+                <div class="block-f-img block-f-img-bg-mr"></div>
+                <div>
+                    <h3 class="f-text-title">
+                        Multiple Roles
+                    </h3>
+                    <img src="assests/img.png/multiple-roles.png" alt="">
+                </div>
+                <div>
+                    <p class="f-text-body">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                    </p>
+                </div>
             </div>
-            <div>
-                <h3>
-                    Reports
-                </h3>
-                <img src="assests/img.png/reports-icon.png" alt="Reports icon">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard.
-                </p>
-            </div>
-            <div>
-                <h3>
-                    Multiple Roles
-                </h3>
-                <img src="assests/img.png/multiple-roles.png" alt="Multiple roles">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard.
-                </p>
-            </div>
-        </section>
+        </div>
+    </div>
+</section>
+<section class="main-container">
+    <h2 class="text-size-35 text-center">Contact</h2>
+    <span class="line-gray"></span>
+    <form class="form-box">
+                    <div class="form-container">
+                        <label for="Name" class="form-text">Name</label>
+                        <input type="text" placeholder="Your Name Here" class="form-input">
+                    </div>
+                    <div class="form-container">
+                        <label for="Contact" class="form-hidden">Contact Area</label>
+                        <select name="Area">
+                            <option hidden value="Placeholder">Contact Area</option>
+                            <option value="Human Resources">
+                                Human Resources
+                            </option>
+                            <option value="Systems">
+                                Systems
+                            </option>
+                            <option value="Commercialization">
+                                Commercialization
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-container">
+                        <label for="Email" class="form-text">Email</label>
+                        <input type="text" placeholder="Your Email Here" class="form-input">
+                    </div>
+                    <div class="form-message-container">
+                        <label for="Message" class="form-text">Message</label>
+                        <textarea placeholder="Your Message Here" name="Message" id="" class="form-input-message"></textarea>
+                    </div>
+                    <div class="form-button-container">
+                        <button type="submit" class="btn btn-green form-btn-left">
+                            <img src="./assets/img/icons/mail.png" alt="Send Message">
+                            Send Message
+                        </button>
+                        <button class="btn btn-red form-btn-right">
+                            Reset
+                        </button>
+                    </div>
+                </form>
+            </section>
         <section>
             <h2>
                 Contact
