--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -113,205 +113,141 @@
             </article>
         </section>
         <section>
-            <section>
+            <div class="who-main-container">
+                <h2 class="title-h2 text-center">
+                    Why Choose Us?
+                </h2>
+                <span class="line-gray"></span>
+            </div>
+            <div>
                 <div class="main-container">
-                    <h2 class="title-h2 text-center">
-                        Why Choose Us?
-                    </h2>
-                    <span class="line-gray"></span>
+                    <div class="cards-white">
+                        <div class="card-box">
+                            <div class="box-position">
+                                <h3 class="text-size-35">
+                                    Productivity Booster
+                                </h3>
+                                <span class="line-greenblue"></span>
+                                <p class="text-size-30 card-p-white">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                </p>
+                            </div>
+                            <img class="card-img" src="assests/img.png/productivy-booter-picture.png" alt="Productivity Booster image">
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <!-- <div class="main-container"> -->
-                        <div class="cards-white">
+                <div class="cards-gray">
+                    <div class="main-container">
+                        <!-- <div class="cards-container"> -->
                             <div class="card-box">
+                                <img class="card-img" src="assests/img.png/work-traceability-picture.png" alt="Work Traceability image">
                                 <div class="box-position">
-                                    <h3 class="text-size-35">
-                                        Productivity Booster
+                                    <h3 class="text-size-35-gray">
+                                        Work Traceability
                                     </h3>
-                                    <span class="line-greenblue"></span>
-                                    <p class="text-size-30 card-p-white">
+                                    <span class="line-white"></span>
+                                    <p class="text-size-30-gray card-p-gray">
                                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                                     </p>
                                 </div>
-                                <img class="card-img" src="assests/img.png/productivy-booter-picture.png" alt="Productivity Booster image">
                             </div>
                         </div>
                     </div>
-                    <div class="cards-gray">
-                        <div class="main-container">
-                            <!-- <div class="cards-container"> -->
-                                <div class="card-box">
-                                    <img class="card-img" src="assests/img.png/work-traceability-picture.png" alt="Work Traceability image">
-                                    <div class="box-position">
-                                        <h3 class="text-size-35-gray">
-                                            Work Traceability
-                                        </h3>
-                                        <span class="line-white"></span>
-                                        <p class="text-size-30-gray card-p-gray">
-                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                        </p>
-                                    </div>
-                                </div>
+                </div>
+                <!-- <div class="main-container"> -->
+                    <div class="cards-white">
+                        <div class="card-box">
+                            <div class="box-position">
+                                <h3 class="text-size-35">
+                                    Leadership and Team Management
+                                </h3>
+                                <span class="line-gray-thin"></span>
+                                <p class="text-size-30 card-p-white">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                </p>
                             </div>
+                            <img class="card-img" src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management image">
                         </div>
                     </div>
-                    <!-- <div class="main-container"> -->
-                        <div class="cards-white">
+                </div>
+                <div class="cards-gray">
+                    <div class="main-container">
+                        <!-- <div class="cards-container"> -->
                             <div class="card-box">
+                                <img class="card-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
                                 <div class="box-position">
-                                    <h3 class="text-size-35">
-                                        Leadership and Team Management
+                                    <h3 class="text-size-35-gray">
+                                        Decision Making
                                     </h3>
-                                    <span class="line-gray-thin"></span>
+                                    <span class="line-white"></span>
                                     <p class="text-size-30 card-p-white">
                                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                                     </p>
-                                </div>
-                                <img class="card-img" src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cards-gray">
-                        <div class="main-container">
-                            <!-- <div class="cards-container"> -->
-                                <div class="card-box">
-                                    <img class="card-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
-                                    <div class="box-position">
-                                        <h3 class="text-size-35-gray">
-                                            Decision Making
-                                        </h3>
-                                        <span class="line-white"></span>
-                                        <p class="text-size-30 card-p-white">
-                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                        </p>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-        <section>
-            <section class="main-container">
-                <h2 class="text-size-35 text-center">
+            <section class="f-container">
+                <h2 class="f-title">
                     Functionalities
                 </h2>
-                <span class="line-gray"></span>
-                <div class="f-container">
-                    <div class="block padding20">
-                        <div>
-                            <h3 class="f-text-title">
-                                Hours Log
-                            </h3>
-                            <img src="assests/img.png/hours-log-icon.png" alt="">
-                        </div>
-                    </div>
-                </div>
-                            <p class="f-text-body">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-                            </p>
-                    <div class="block padding20">
-                    <div class="block-f-img block-f-img-bg-rm"></div>
-                        <div>
-                            <h3 class="f-text-title">
-                                Resource Management
-                            </h3>
-                            <img src="assests/img.png/resource-management-icon.png" alt="">
-                        </div>
+                <div class="functionalities">
+                <article>
+                        <h3>
+                            Hours Log
+                        </h3>
+                        <img src="assests/img.png/hours-log-icon.png" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                        </p>
+                </article>
+                <article>
+                        <h3>
+                            Resource Management
+                        </h3>
+                        <img src="assests/img.png/resource-management-icon.png" alt="">
                         <p class="f-text-body">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
                         </p>
-            <div class="block padding20">
-                <div class="block-f-img block-f-img-bg-r"></div>
-                <div>
-                    <div>
-                        <h3 class="f-text-title">
+                </article>
+                <article>
+                        <h3>
                             Reports
                         </h3>
                         <img src="assests/img.png/reports-icon.png" alt="">
-                    </div>
-                    <div>
-                        <p class="f-text-body">
+                        <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
                         </p>
-                    </div>
+                </article>
+                <article>
+                        <h3>
+                            Multiple Roles
+                        </h3>
+                        <img src="assests/img.png/multiple-roles.png" alt="">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                        </p>
+                </article>
                 </div>
-            </div>
-            <div class="block padding20">
-                <div class="block-f-img block-f-img-bg-mr"></div>
-                <div>
-                    <h3 class="f-text-title">
-                        Multiple Roles
-                    </h3>
-                    <img src="assests/img.png/multiple-roles.png" alt="">
-                </div>
-                <div>
-                    <p class="f-text-body">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="main-container">
-    <h2 class="text-size-35 text-center">Contact</h2>
-    <span class="line-gray"></span>
-    <form class="form-box">
-                    <div class="form-container">
-                        <label for="Name" class="form-text">Name</label>
-                        <input type="text" placeholder="Your Name Here" class="form-input">
-                    </div>
-                    <div class="form-container">
-                        <label for="Contact" class="form-hidden">Contact Area</label>
-                        <select name="Area">
-                            <option hidden value="Placeholder">Contact Area</option>
-                            <option value="Human Resources">
-                                Human Resources
-                            </option>
-                            <option value="Systems">
-                                Systems
-                            </option>
-                            <option value="Commercialization">
-                                Commercialization
-                            </option>
-                        </select>
-                    </div>
-                    <div class="form-container">
-                        <label for="Email" class="form-text">Email</label>
-                        <input type="text" placeholder="Your Email Here" class="form-input">
-                    </div>
-                    <div class="form-message-container">
-                        <label for="Message" class="form-text">Message</label>
-                        <textarea placeholder="Your Message Here" name="Message" id="" class="form-input-message"></textarea>
-                    </div>
-                    <div class="form-button-container">
-                        <button type="submit" class="btn btn-green form-btn-left">
-                            <img src="./assets/img/icons/mail.png" alt="Send Message">
-                            Send Message
-                        </button>
-                        <button class="btn btn-red form-btn-right">
-                            Reset
-                        </button>
-                    </div>
-                </form>
             </section>
-        <section>
-            <h2>
-                Contact
-            </h2>
+            <section class="c-container">
+                <h2 class="c-title">
+                    Contact
+                </h2>
             <form>
-                <div>
-                    <label>
+                <span>
+                    <label for="Name">
                         Name
                     </label>
-                    <input type="text" name="Name" placeholder="Your Name here">
-                </div>
-                <div>
-                    <label>
-                        Contact Area
-                    </label>
-                    <select name="Area" aria-placeholder="Contact Area">
+                    <input type="text" placeholder="Your Name Here">
+                </span>
+                <span>
+                    <select name="Area">
+                        <option hidden value="Placeholder">
+                            Contact Area
+                        </option>
                         <option value="Human Resources">
                             Human Resources
                         </option>
@@ -322,24 +258,31 @@
                             Commercialization
                         </option>
                     </select>
-                </div>
+                </span>
                 <div>
-                    <label>
+                    <label for="Email">
                         Email
                     </label>
-                    <input type="email" name="Email" placeholder="Your Name Here">
+                    <input type="text" placeholder="Your Email Here" >
                 </div>
-                <div>
-                    <label>
+                <div class="form-message-container">
+                    <label for="Message" >
                         Message
                     </label>
-                    <textarea name="message" placeholder="Your Message Here"></textarea>
+                    <textarea placeholder="Your Message Here" name="Message"></textarea>
                 </div>
-                    <input type="submit" name="Submit" value="Send Message">
-                    <input type="submit" name="Submit" value="Reset">
+                <div>
+                    <button type="submit" class="send-button">
+                        <img src="./assests/img.png/mail-icon.png" alt="Send Message">
+                        Send Message
+                    </button>
+                    <button class="reset-button">
+                        Reset
+                    </button>
+                </div>
             </form>
         </section>
-        <section>
+        <section class="product-enterprise-support">
             <div>
                 <h4>
                     Product
