--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -112,84 +112,50 @@
                 </div>
             </article>
         </section>
-        <section>
-            <div class="who-main-container">
-                <h2 class="title-h2 text-center">
+        <section class="why">
+                <h2>
                     Why Choose Us?
                 </h2>
-                <span class="line-gray"></span>
+            <div class="card-box-white">
+                <h3 class="h3-left">
+                    Productivity Booster
+                </h3>
+                <p class="why-p-white">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <img class="white-img" src="assests/img.png/productivy-booter-picture.png" alt="Productivity Booster image">
             </div>
-            <div>
-                <div class="main-container">
-                    <div class="cards-white">
-                        <div class="card-box">
-                            <div class="box-position">
-                                <h3 class="text-size-35">
-                                    Productivity Booster
-                                </h3>
-                                <span class="line-greenblue"></span>
-                                <p class="text-size-30 card-p-white">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                </p>
-                            </div>
-                            <img class="card-img" src="assests/img.png/productivy-booter-picture.png" alt="Productivity Booster image">
-                        </div>
-                    </div>
+            <div class="card-box-gray">
+                <div>
+                    <img class="gray-img" src="assests/img.png/work-traceability-picture.png" alt="Work Traceability image">
+                    <h3 class="h3-right">
+                        Work Traceability
+                    </h3>
+                    <p class="why-p-gray">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
                 </div>
-                <div class="cards-gray">
-                    <div class="main-container">
-                        <!-- <div class="cards-container"> -->
-                            <div class="card-box">
-                                <img class="card-img" src="assests/img.png/work-traceability-picture.png" alt="Work Traceability image">
-                                <div class="box-position">
-                                    <h3 class="text-size-35-gray">
-                                        Work Traceability
-                                    </h3>
-                                    <span class="line-white"></span>
-                                    <p class="text-size-30-gray card-p-gray">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="main-container"> -->
-                    <div class="cards-white">
-                        <div class="card-box">
-                            <div class="box-position">
-                                <h3 class="text-size-35">
-                                    Leadership and Team Management
-                                </h3>
-                                <span class="line-gray-thin"></span>
-                                <p class="text-size-30 card-p-white">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                </p>
-                            </div>
-                            <img class="card-img" src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management image">
-                        </div>
-                    </div>
-                </div>
-                <div class="cards-gray">
-                    <div class="main-container">
-                        <!-- <div class="cards-container"> -->
-                            <div class="card-box">
-                                <img class="card-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
-                                <div class="box-position">
-                                    <h3 class="text-size-35-gray">
-                                        Decision Making
-                                    </h3>
-                                    <span class="line-white"></span>
-                                    <p class="text-size-30 card-p-white">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="f-container">
+            </div>
+            <div class="card-box-white">
+                <h3 class="h3-left">
+                    Leadership and Team Management
+                </h3>
+                <p class="why-p-white">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <img class="white-img" src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management image">
+            </div>
+            <div class="card-box-gray">
+                <img class="gray-img" src="assests/img.png/decision-making-picture.png" alt="Decision Making image">
+                <h3 class="h3-right">
+                    Decision Making
+                </h3>
+                <p class="why-p-gray">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+            </div>
+        </section>
+        <section class="f-container">
                 <h2 class="f-title">
                     Functionalities
                 </h2>
@@ -273,16 +239,18 @@
                 </div>
                 <div>
                     <button type="submit" class="send-button">
-                        <img src="./assests/img.png/mail-icon.png" alt="Send Message">
+                        <img src="./assests/img.png/mail.png" alt="Send Message">
                         Send Message
                     </button>
                     <button class="reset-button">
+                        <img src="assests/img.png/delete-icon.png" alt="Delete">
                         Reset
                     </button>
                 </div>
             </form>
         </section>
         <section class="product-enterprise-support">
+            <!-- <img src="assests/img.png/picture-footer.png" alt=""> -->
             <div>
                 <h4>
                     Product
