BaSP-W03-2022: Finish css

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+        <script src="https://kit.fontawesome.com/e0deaaf2c8.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <aside>
@@ -23,18 +24,18 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#" id class="home-text-option"="home">
-                            <img src="assests/img.png/home-icon.png" alt="Home icon">Home
+                        <a href="#" id class="home-text-option">
+                            <i class="fa-solid fa-house"></i>Home
                         </a>
                     </li>
                     <li>
                         <a class="signup-icon-option" href="#">
-                            <img src="assests/img.png/sign-up-icon.png" alt ="SignUp icon">SignUp
+                            <i class="fa-solid fa-user"></i>SignUp
                         </a>
                     </li>
                     <li class="login-icon-option">
                         <a href="#">
-                            <img src="assests/img.png/login-icon.png" alt="Login icon">Login
+                            <i class="fa-solid fa-user"></i>Login
                         </a>
                     </li>
                 </ul>
@@ -46,15 +47,15 @@
             </p>
                 <ul>
                     <li>
-                        <a href="#" id="contact-us-icons">
+                        <a href="#" id="contact-us-icon">
                             <p>
-                            <img src="assests/img.png/mail-icon.png" class="img-icon" alt="Mail-icon">
+                            <img src="assests/img.png/mail-icon.png" alt="Mail-icon">
                                 trackgenix@gmail.com
                             </p>
                         </a>
                     </li>
                     <li>
-                        <a href="#" id=contact-us-icon>
+                        <a href="#" id="contact-us-icon">
                             <p>
                             <img src="assests/img.png/phone-icon.png" alt="Phone-icon">
                                 (000) 0000-00000
@@ -89,11 +90,12 @@
                 </p>
             </div>
         </header>
-        <section>
-            <div class="who-container">
-                <h2 class="who-tittle">
-                    Who we are
-                </h2>
+        <section class="who-container">
+            <article>
+
+                    <h2 class="who-tittle">
+                        Who we are
+                    </h2>
                 <div>
                     <p class="p1">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -112,7 +114,7 @@
                 </div>
             </article>
         </section>
-        <section class="why">
+        <section class="why-container">
                 <h2>
                     Why Choose Us?
                 </h2>
@@ -310,24 +312,24 @@
         </section>
         <footer>
             <div>
-                <img src="assests/img.png/linkedIn-icon.png" alt="Linked In icon">
                 <a href="https://www.linkedin.com/" target="_blank"></a>
+                <i class="fa-brands fa-linkedin"></i>
             </div>
             <div>
-                <img src="assests/img.png/facebook-icon.png" alt="Facebook icon">
                 <a href="https://www.facebook.com/" target="_blank"></a>
+                <i class="fa-brands fa-facebook"></i>
             </div>
             <div>
-                <img src="assests/img.png/twitter-icon.png" alt="Twitter icon">
                 <a href="https://twitter.com//" target="_blank"></a>
+                <i class="fa-brands fa-twitter"></i>
             </div>
             <div>
-                <img src="assests/img.png/instagram-icon.png" alt="Instagram icon">
-                <img src="https://www.instagram.com/" alt="">
+                <a src="https://www.instagram.com/" alt=""></a>
+                <i class="fa-brands fa-instagram"></i>
             </div>
             <div>
-                <img src="assests/img.png/github-icon.png" alt="Github icon">
                 <a href="https://github.com/" target="_blank"></a>
+                <i class="fa-brands fa-github"></i>
             </div>
             <p>
                 Rosario, Argentina
